created 'pages' directory and moved 'carrotcake.html' there, created 'empanadas.html'

--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
     <h1>Odin Recipes</h1>
     <br>
     <br>
-    <a href="carrotcake.html">Carrot Cake</a>
+    <ul>
+        <li><a href="pages/carrotcake.html">Carrot Cake</a></li>
+        <li><a href="pages/empanadas.html">Beef Empanadas</a></li>
+        
+    </ul>
+
 </body>
 
 
