created a style sheet for the webpage and messed with some basic settings, ie background color, font, flexbox etc.

--- a/pages/carrotcake.html
+++ b/pages/carrotcake.html
@@ -3,16 +3,18 @@
 <head>
     <title>Carrot Cake</title>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="../style.css">
+
 </head>
 <body>
     <h1>Carrot Cake</h1> 
-    <img width="640" height="427" src="../images/carrotcake.jpg" alt="a tasty slice of carrot cake">
+    <img src="../images/carrotcake.jpg" alt="a tasty slice of carrot cake">
     <br>
     <br>
     <h2>This carrot cake is quick, easy to make, and utterly delicious. It wasn’t until recently that we realized just how much we love carrot cake. It wasn’t something either of us grew up eating. Thanks to this easy recipe, we fell in love. You can make this cake quickly without lots of fancy equipment. Not only is this the best-tasting carrot cake we’ve made, but it’s a cinch to make.</h2>
     <h3>Ingredients</h3>
     <p><strong>For the cake...</strong></p>
-    <ul>
+    <ul class="list">
         <li>2 cups (250 grams) all-purpose flour</li>
         <li>2 teaspoons baking soda</li>
         <li>1/2 teaspoon fine sea salt</li>
@@ -28,7 +30,7 @@
       
     </ul>
     <p><strong>And for the icing on top...</strong></p>
-    <ul>
+    <ul class="list">
         <li>8 ounces (225 grams) cream cheese, at room temperature</li>
         <li>1 ¼ cups (140 grams) powdered sugar</li>
         <li>1/3 cup (80 ml) heavy whipping cream</li>
@@ -40,7 +42,7 @@
     <br>
     <h3>Now that you have all the things... Here's how it's done:</h3>
     <p><strong>To make the batter you must:</strong></p>
-    <ol>
+    <ol class="list">
         <li>Heat the oven to 350 degrees Fahrenheit (176C). Grease two 9-inch round cake pans and line the bottom with parchment paper then grease the top of the paper. Or, grease and flour the bottom and sides of both pans.</li>
         <li>In a medium bowl, whisk flour, baking soda, salt, and the cinnamon until well blended.</li>
         <li>In a separate bowl, whisk the oil, sugars, and vanilla. Whisk in eggs, one at a time, until combined.</li>
@@ -49,23 +51,17 @@
 
     </ol>
     <p><strong>Then, to take the batter and make it a cake, you must:</strong></p>
-    <ol>
-        <li>Divide the batter between the prepared cake pans. Bake until the tops of the cake layers are springy when touched and when a toothpick inserted into the center of the cake comes out clean, 35 to 45 minutes.
-
-        </li>
-        <li>Cool cakes in pans for 15 minutes then turn out onto cooling racks, peel off parchment paper and cool completely. (If you find that a cake layer is stuck to the bottom of the pan, leave the cake pan upside down and allow gravity to do its thing).
-
-        </li>
+    <ol class="list">
+        <li>Divide the batter between the prepared cake pans. Bake until the tops of the cake layers are springy when touched and when a toothpick inserted into the center of the cake comes out clean, 35 to 45 minutes.</li>
+        <li>Cool cakes in pans for 15 minutes then turn out onto cooling racks, peel off parchment paper and cool completely. (If you find that a cake layer is stuck to the bottom of the pan, leave the cake pan upside down and allow gravity to do its thing).</li>
 
     </ol>
     <p><strong>Finally, to take the pieces and make them whole, please:</strong></p>    
 
-    <ol>
+    <ol class="list">
         <li>In a large bowl, beat cream cheese with a handheld mixer on medium speed until creamy, about 1 minute.</li>
         <li>Beat in the powdered sugar, a 1/4 cup at a time until fluffy. Pour in cream and beat on medium speed for 1 minute. Chill covered until ready to frost cake.</li>
-        <li>When the cake layers are completely cool, frost the top of one cake layer, place the other cake layer on top. Decoratively swirl the top of the cake with remaining frosting, leaving the sides unfrosted. Scatter nuts on top.
-
-        </li>
+        <li>When the cake layers are completely cool, frost the top of one cake layer, place the other cake layer on top. Decoratively swirl the top of the cake with remaining frosting, leaving the sides unfrosted. Scatter nuts on top.</li>
 
     </ol>
   
