--- a/pages/empanadas.html
+++ b/pages/empanadas.html
@@ -3,16 +3,19 @@
 <head>
     <title>Beef Empanadas</title>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="../style.css">
+
 </head>
 <body>
     <h1>Beef Empanadas</h1> 
-    <img width="640" height="427" src="../images/Beef-Empanadas-15.webp" alt="a plate of delicious empanadas">
+    <img width="670" height="auto" src="../images/Beef-Empanadas-15.webp" alt="a plate of delicious empanadas">
     <br>
     <br>
     <h2>Tender, flaky crust surrounding a hearty mixture of warmly-spiced ground beef and vegetables—we’re going to teach you how to make the best beef empanadas you’ve ever tasted.</h2>
     <h3>Ingredients</h3>
     <p><strong>For the filling you will need...</strong></p>
-    <ul>
+    <div class="card">
+    <ul class="list">
         <li>1 Large russet potato, peeled, diced into 1/4 inch cubes</li>
         <li>2 tbsp olive oil</li>
         <li>3/4 lbs. ground beef</li>
@@ -29,8 +32,9 @@
         <li>1/2 tsp pepper</li>
       
     </ul>
+    </div>
     <p><strong>The crust will require...</strong></p>
-    <ul>
+    <ul class="list">
         <li>2 1/2 cups all purpose flour</li>
         <li>1/2 tsp sea salt</li>
         <li>4 oz. of unsalted butter, chilled and cut into 1/4 inch cubes</li>
@@ -44,7 +48,7 @@
     <br>
     <h3>Now that you have all the things... Here's how it's done:</h3>
     <p><strong>To make the dough you must:</strong></p>
-    <ol>
+    <ol class="list">
         <li>Pulse the flour and salt in a food processor.</li>
         <li>Add the butter, 1 large egg and ice water, pulsing until the mixture resembles coarse crumbs.</li>
         <li>Shape the dough into a ball.</li>
@@ -53,7 +57,7 @@
 
     </ol>
     <p><strong>Then, to prepare the filling, you must:</strong></p>
-    <ol>
+    <ol class="list">
         <li>Fill a medium size pot ¾ full with water and bring to a boil. Add the cubed potato to the pot and boil until tender, about 3 minutes.</li>
         <li>Meanwhile, in a large skillet set over medium, heat the olive oil until shimmering. Add the ground beef along with the onions, celery and carrots. Cook until the beef is browned and vegetables are softened, about 8 minutes. Once potatoes are cooked, drain and add them to the ground beef mixture.</li>
         <li>Add the garlic, chili powder, cumin, cinnamon and beef broth, cook 1 minute longer until spices are fragrant. Add and peas and simmer over medium heat until everything is fully incorporated and most of the liquid has been absorbed. Season with salt and pepper.</li>
@@ -62,7 +66,7 @@
     </ol>
     <p><strong>Finally, to take the pieces and make them whole, please:</strong></p>    
 
-    <ol>
+    <ol class="list">
         <li>Preheat oven to 375°F and place rack into the center of the oven.</li>
         <li>Remove dough from refrigerator and divide it into 10 equal part—roughly 2.2 oz each. Roll each piece of dough very thin on a lightly floured surface until you have a circle roughly 7” wide. Working with one at a time add a heaping ⅓ cup of filling onto one side of the dough.</li>
         <li>In a small bowl, mix together the beaten egg with 1 tablespoon of water. Wet a pastry brush with egg wash and dampen the inside ¼ inch edge of the dough. Fold the dough in half over the filling. Using a fork, firmly press the edges together. Repeat this process with remaining dough and filling and arrange on a parchment lined baking sheet.</li>
