--- a/pages/meatloaf.html
+++ b/pages/meatloaf.html
@@ -3,16 +3,18 @@
 <head>
     <title>Meatloaf</title>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="../style.css">
+
 </head>
 <body>
     <h1>Meatloaf</h1> 
-    <img width="640" height="427" src="../images/meatloaf.jpeg" alt="a plate of delicious empanadas">
+    <img src="../images/meatloaf.jpeg" alt="a plate of delicious empanadas">
     <br>
     <br>
     <h2>This is a very easy and no fail recipe for meatloaf. It won't take long to make at all, and it's quite good!</h2>
     <h3>Ingredients</h3>
     <p><strong>To create this amazing loaf of meat, you will need:</strong></p>
-    <ul>
+    <ul class="list">
         <li>1 ½ pounds ground beef</li>
         <li>1 egg</li>
         <li>1 onion, chopped</li>
@@ -28,7 +30,7 @@
     <br>
     <br>
     <h3>Now that you have all the things... Here's how it's done:</h3>
-    <ol>
+    <ol class="list">
         <li>Preheat oven to 350 degrees F (175 degrees C).</li>
         <li>In a large bowl, combine the beef, egg, onion, milk and bread OR cracker crumbs. Season with salt and pepper to taste and place in a lightly greased 9x5-inch loaf pan, or form into a loaf and place in a lightly greased 9x13-inch baking dish.</li>
         <li>In a separate small bowl, combine the brown sugar, mustard and ketchup. Mix well and pour over the meatloaf.</li>
