messed with CSS to try and make style better, learned about margins and inline properties of block model

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>Odin Recipes</h1>
     <br>
     <br>
-    <ul>
+    <ul class="list">
         <li><a href="pages/carrotcake.html">Carrot Cake</a></li>
         <li><a href="pages/empanadas.html">Beef Empanadas</a></li>
         <li><a href="pages/meatloaf.html">Meatloaf</a></li>
