--- a/pages/meatloaf.html
+++ b/pages/meatloaf.html
@@ -14,6 +14,7 @@
     <h2>This is a very easy and no fail recipe for meatloaf. It won't take long to make at all, and it's quite good!</h2>
     <h3>Ingredients</h3>
     <p><strong>To create this amazing loaf of meat, you will need:</strong></p>
+    <div class="card">
     <ul class="list">
         <li>1 ½ pounds ground beef</li>
         <li>1 egg</li>
@@ -27,6 +28,7 @@
     
       
     </ul>
+    </div>
     <br>
     <br>
     <h3>Now that you have all the things... Here's how it's done:</h3>
